pkg/ddevapp/testdata/TestValidatePHPIncludesAndRequires/SyntaxErrorAddon/broken.php
#ddev-generated
<?php
// This file has invalid PHP syntax
echo "Unclosed string
syntax error here }